footer spacing and alignments and colors issue fixed

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -21,18 +21,29 @@
 
     p {
       color: color(gray-5);
-      max-width: 75%;
+      max-width: 350px;
       margin-bottom: 22px;
     }
 
     &-contact {
       color: color(gray-5);
-
+      @include max(420px) {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
       a {
         margin: 0px 16px;
-
+        max-width: 250px;
+        @include max(420px) {
+          margin: 0px;
+          margin: 6px;
+        }
         &:nth-child(1) {
           margin-left: 0px;
+          @include max(420px) {
+            margin-top: 0px;
+          }
         }
 
         &:nth-child(2) {
@@ -58,7 +69,9 @@
   // footer navigation menu
   &__navigation {
     overflow: hidden;
-
+    @include max(767px) {
+      margin-bottom: 20px;
+    }
     &-title {
       margin-bottom: 20px;
 
@@ -121,7 +134,7 @@
       align-items: center;
       margin-right: 8px;
       padding: 10px;
-
+      flex: none;
       &:hover {
         background-color: color(gray-1);
         transition: all 0.3s linear;
@@ -153,13 +166,23 @@
 
   // instagram galery
   &__instagram {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    @include max(1460px) {
+      justify-content: flex-start;
+    }
     &-item {
-      margin-right: 12px;
-      margin-bottom: 12px;
-
-      .cards-ig__img {
-        width: 69px;
-        height: 69px;
+      margin-bottom: 4px;
+      @include max(1460px) {
+        margin-right: 12px;
+      }
+      .cards-ig {
+        &__img {
+          width: 65px;
+          height: 65px;
+        }
       }
     }
   }
@@ -198,6 +221,10 @@
       &__top {
         background-color: color(gray-0);
         padding: 60px;
+        @include max(1200px) {
+          padding: 0px;
+          padding-top: 60px;
+        }
       }
 
       &__bottom {
@@ -211,6 +238,9 @@
 
     .footer {
       &__brand-info {
+        @include max(1199px) {
+          margin-bottom: 30px;
+        }
         p {
           color: color(green-5);
         }
@@ -235,7 +265,7 @@
       &__social-icon {
         &-link {
           a {
-            color: color(green-3);
+            color: #96b297;
 
             &:hover {
               color: #fff;
@@ -246,6 +276,11 @@
 
       &__copyright-text {
         color: color(green-5);
+      }
+
+      &__bottom {
+        border-top: 0;
+        box-shadow: 0px -1px 0px 0px #1b421d;
       }
     }
   }
@@ -413,20 +448,10 @@
 
 // Responsive
 
-@media (max-width: 1440px) {
-  .footer--two .footer__top {
-    padding: 60px 30px;
-  }
-}
-
 @media (max-width: 1200px) {
   // Footer two
   .footer--two {
     background-color: #f2f2f2;
-  }
-
-  .footer--two .footer__top {
-    padding: 60px 0px;
   }
 
   .footer--two .footer__brand-info-contact,
@@ -444,20 +469,20 @@
 
 @media (min-width: 992px) and (max-width: 1200px) {
   // footer one
-  .footer {
-    &__brand-info {
-      &-contact {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+  // .footer {
+  //   &__brand-info {
+  //     &-contact {
+  //       display: flex;
+  //       flex-direction: column;
+  //       align-items: flex-start;
 
-        a {
-          margin-left: 0;
-          margin-bottom: 15px;
-        }
-      }
-    }
-  }
+  //       a {
+  //         margin-left: 0;
+  //         margin-bottom: 15px;
+  //       }
+  //     }
+  //   }
+  // }
 }
 
 @media (max-width: 991px) {
@@ -469,16 +494,6 @@
 @media (max-width: 767px) {
   .footer__top {
     padding-bottom: 30px;
-  }
-
-  .footer__brand-info-contact {
-    display: flex;
-    flex-direction: column;
-
-    a {
-      margin: 0;
-      margin-bottom: 15px;
-    }
   }
 
   .footer__brand-info p {
@@ -502,10 +517,6 @@
   // Footers Two
   .footer--two {
     background-color: #f2f2f2;
-  }
-
-  .footer--two .footer__top {
-    padding: 60px 0px;
   }
 
   // Footer three
